Admin impl and fixes
