# Rework/HighCode.Domain/ApiRequests/Admin/ChangeUserRoleCommand.cs
@@ -1,0 +1,10 @@
+﻿using HighCode.Domain.Responses;
+using MediatR;
+
+namespace HighCode.Domain.ApiRequests.Admin;
+
+public class ChangeUserRoleCommand : IRequest<Result<SimpleResponse>>
+{
+    public Guid UserId { get; set; }
+    public int Role { get; set; }
+}
