# Rework/HighCode.Domain/ApiRequests/Admin/GetUsersQuery.cs
@@ -1,0 +1,10 @@
+﻿using HighCode.Domain.ApiResponses.Admin;
+using HighCode.Domain.Responses;
+using MediatR;
+
+namespace HighCode.Domain.ApiRequests.Admin;
+
+public class GetUsersQuery : IRequest<Result<GetUsersResponse>>
+{
+    public string? searchQuery { get; set; }
+}
