# Rework/HighCode.Domain/ApiResponses/Admin/GetUsersResponse.cs
@@ -1,0 +1,9 @@
+﻿using HighCode.Domain.DTO;
+using HighCode.Domain.Responses;
+
+namespace HighCode.Domain.ApiResponses.Admin;
+
+public class GetUsersResponse : ResponseBase
+{
+    public IEnumerable<UserDTO> Users { get; set; }
+}
